--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,7 @@
+/***********************
+ Authentication
+***********************/
+
 .main-auth {
   width: 100vw;
   height: 100vw;
@@ -25,17 +29,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.field-container {
-  width: 100%;
-  padding: 0;
-  margin: 25px 0 0 0;
-}
-
-.field-container .error {
-  color: red;
-  margin-top: 3px;
 }
 
 .auth-form input {
@@ -77,7 +70,24 @@
   color: #4272d7;
 }
 
-/* alert-message */ 
+/***********************
+ Form Fields
+***********************/
+
+.field-container {
+  width: 100%;
+  padding: 0;
+  margin: 25px 0 0 0;
+}
+
+.field-container .error {
+  color: red;
+  margin-top: 3px;
+}
+
+/***********************
+ Alert Message
+***********************/
 
 #alert-message {
   visibility: hidden; 
@@ -127,3 +137,59 @@
   from {top: 30px; opacity: 1;}
   to {top: 0; opacity: 0;}
 }
+
+/***********************
+ Main
+***********************/
+
+.content-wrapper {
+  max-width: 60em;
+}
+
+main {
+  background-color: rgb(245, 245, 245);
+  display: flex;
+  flex-direction: column;
+}
+
+.page-bar {
+  color: rgb(171, 171, 171);
+  border-bottom: 1px solid; 
+  border-bottom-color: rgb(245, 245, 245);
+  background-color: white;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.page-bar-items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 15px;
+}
+
+.page-bar h2 {
+  margin: 10px;
+}
+
+.page-bar button { 
+  background-color: rgb(41, 202, 99);
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 0;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  height: 30px;
+}
+
+.page-bar span {
+  margin: 0px 10px;
+  cursor: pointer;
+}
+
+.page-bar span.active {
+  border-bottom: 3px solid rgb(41, 202, 99);
+  cursor: default;
+} 
