Added Leaderboard page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,13 +4,14 @@
 
 .main-auth {
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
 }
 
 .auth-container {
   width: 50%;
+  max-width: 500px;
   align-self: center;
   display: flex;
   align-items: center;
